# search-a-licious

./: .env  .env.openfoodfacts  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  TODO.md  api.py  config_schema.json  crowdin.yml  docker-compose.override.yml  docker-compose.yml  index.html  json_schema.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: auto-fix-linting.yml  codeql.yml  container-build.yml  container-deploy.yml  crowdin.yml  generate-doc.yml  github-projects.yml  label.yml  merge-conflict-autolabel.yml  pre-commit.yml  release-please.yml
app/: _import.py  _types.py  api.py  charts.py  config.py  dsl.py  es_query_builder.py  es_scripts.py  exceptions.py  facets.py  health.py  indexing.py  openfoodfacts.py  postprocessing.py  product.schema.json  query.py  query_pipeline.py  query_transformers.py  queue.py  queue_helpers.py  search.py  search_client.py  taxonomy.py  taxonomy_es.py  types.py  validations.py
app/cli/: es_query.py  http_autocomplete_query.py  main.py  perform_import.py  perform_import_parallel.py  write_to_redis.py
app/config/: __init__.py  loader.py  models.py  settings.py
app/import_queue/: product_client.py  queue_manager.py  redis_client.py
app/models/: product.py  request.py
app/scripts/: data-fields.txt  es_query.py  generate_product_from_data_fields.py  generate_schema.py  http_autocomplete_query.py  http_query.py  http_search_query.py  perform_import.py  perform_import_parallel.py  write_to_redis.py
app/templates/: display_results.html  search.html
app/test/: test_api.py
app/utils/: __init__.py  analyzers.py  connection.py  constants.py  dict_utils.py  download.py  io.py  lists.py  log.py  query_utils.py  response.py  str_utils.py
confs/: nginx.conf
data/: searchalicious-openapi.yml
data/config/: openfoodfacts.yml  taxonomy.yml
devs/: index.html
devs/explain-architecture/: index.html
devs/explain-web-frontend/: index.html
devs/how-to-debug-backend/: index.html
devs/how-to-install/: index.html
devs/introduction/: index.html
devs/ref-python/: .buildinfo  api.html  cli.html  config.html  genindex.html  index.html  misc.html  objects.inv  py-modindex.html  search.html  searchindex.js  searching.html  types.html
docker/: ci-cache.yml  dev.yml  elasticvue-entrypoint.sh  monitor.yml  prod.yml
docs/: .pages  README.md  how-to-install.md  install.md
docs/assets/: NGI architecture diagram.drawio
docs/devs/: .pages  explain-architecture.md  explain-web-frontend.md  how-to-debug-backend.md  how-to-install.md  introduction.md  ref-python.md  runtime-techdebt.md
docs/reports/: .pages  2024-06 thoughts on scoring.md
docs/sphinx/: cli.rst  conf.py  index.rst  types.rst
docs/users/: .pages  explain-configuration.md  explain-query-language.md  explain-scripts.md  explain-taxonomies.md  how-to-install.md  how-to-update-index.md  how-to-use-scripts.md  ref-config.md  ref-openapi.md  ref-settings.md  ref-web-components.md  searchalicious-config-schema.yml  tutorial.md
frontend/: .eslintignore  .eslintrc.json  Dockerfile  README.md  lit-localize.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.js  web-test-runner.config.js
frontend/public/: index.html  off.html  tutorial.html  web-components.html
frontend/src/: button-transparent.ts  button-without-background.ts  (+40 more)
models/: product.py  request.py
scripts/: Dockerfile.json-schema-static-docs  Dockerfile.mkdocs  Dockerfile.schema  Dockerfile.sphinx  build_mkdocs.sh  build_schema.sh  build_sphinx.sh  data-fields.txt  es_query.py  generate-config-docs.js  generate-config-docs.sh  generate_doc.sh  generate_doc_webcomponents.sh  generate_product_from_data_fields.py  http_query.py  perform_import.py  schema-config.json
search/: search_index.json
tests/: cli_utils.py  conftest.py
users/: index.html
utils/: analyzers.py  connection.py  response.py
(+279 files in other folders)
