[tool.poetry]
name = "search-a-licious"
version = "0.1.0"
description = ""
authors = ["Open Food Facts team"]
license = "AGPL-3.0 licence"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch-dsl = "~8.9.0"
fastapi = "~0.115.0"
requests = "~2.32.4"
redis = "~5.0.0"
uvicorn = "~0.23.2"
tqdm = "~4.66.1"
cachetools = "~5.3.2"
typer = "~0.9.0"
luqum = "~0.13.0"
pydantic-settings = "~2.0.3"
sentry-sdk = {extras = ["fastapi"], version = "~1.34.0"}
jinja2 = "~3.1.6"
pyyaml = "~6.0.1"
orjson = "~3.9.15"
py-healthcheck = "^1.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
mypy = "^1.10.0"
types-cachetools = "^5.3.0.7"
types-requests = "^2.31.0.10"
types-pyyaml = "^6.0.12.12"
pre-commit = "^3.5.0"
factory-boy = "^3.3.1"
httpx = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.mypy]
ignore_missing_imports = true
exclude = '''(?x)(
    .*\.cache/pre-commit/.*  # avoid pre-commit cache
)'''

[tool.isort]
profile = "black"

[tool.coverage.run]
data_file = ".cov/.coverage"
source = ["app"]

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.coverage.html]
directory = ".cov/htmlcov"
