[project]
name = "search-a-licious"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "AGPL-3.0-only"
authors = [{ name = "Open Food Facts team" }]
dependencies = [
  "cachetools~=5.3.2",
  "elasticsearch-dsl~=8.9.0",
  "fastapi~=0.115.0",
  "jinja2~=3.1.6",
  "luqum~=0.13.0",
  "orjson~=3.9.15",
  "py-healthcheck>=1.10.1,<2.0.0",
  "pydantic-settings~=2.0.3",
  "pyyaml~=6.0.1",
  "redis~=5.0.0",
  "requests~=2.32.4",
  "sentry-sdk[fastapi]~=1.34.0",
  "tqdm~=4.66.1",
  "typer~=0.9.0",
  "uvicorn~=0.23.2",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.coverage.run]
data_file = ".cov/.coverage"
source = ["app"]

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.coverage.html]
directory = ".cov/htmlcov"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = '''(?x)(
    .*\.cache/pre-commit/.*  # avoid pre-commit cache
)'''

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
coverage = { extras = ["toml"], version = "^7.3.2" }
factory-boy = "^3.3.1"
httpx = "^0.27.1"
mypy = "^1.10.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
types-cachetools = "^5.3.0.7"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.10"
